tests/rosetta/out/Java/bioinformatics-sequence-mutation.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/bioinformatics-sequence-mutation.mochi:65:25: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/bioinformatics-sequence-mutation.mochi:65:25

 65 |     arr = arr[0:len(arr)-1]
    |                         ^

help:
  Parse error occurred. Check syntax near this location.